Improve date handling, working on cookiejar handling

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -10,7 +10,8 @@
     />
   </head>
   <body>
-    <h1>Fabi Kurse auf einen Blick</h1>
+    <h2>Fabi - Zeit für Familie</h2>
+    <h3>Kurse auf einen Blick</h3>
     <table id="table" class="display" style="width: 100%">
       <thead>
         <tr>
