--- a/website/src/index.html
+++ b/website/src/index.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <meta charset="utf-8" />
     <title>Fabi Kurse auf einen Blick</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
       href="npm:datatables.net-dt/css/dataTables.dataTables.min.css"
     />
+    <style>
+      /* START via https://news.ycombinator.com/item?id=32972768 */
+      html {
+        max-width: 70ch;
+        /* larger spacing on larger screens, very small spacing on tiny screens */
+        padding: calc(1vmin + 0.5rem);
+        /* shorthand for margin-left/margin-right */
+        margin-inline: auto;
+        /* fluid sizing: https://frontaid.io/blog/fluid-typography-2d-css-locks-clamp/ */
+        font-size: clamp(1em, 0.909em + 0.45vmin, 1.25em);
+        /* use system font stack: https://developer.mozilla.org/en-US/docs/Web/CSS/font-family */
+        font-family: system-ui;
+      }
+
+      /* increase line-height for everything except headings */
+      body :not(:is(h1, h2, h3, h4, h5, h6)) {
+        line-height: 1.75;
+      }
+      /* END via https://news.ycombinator.com/item?id=32972768 */
+
+      /* START via https://css-tricks.com/full-width-containers-limited-width-parents/ */
+      .full-width {
+        width: 100vw;
+        position: relative;
+        left: 50%;
+        right: 50%;
+        margin-left: -50vw !important; /* needed to add !important or dataTables default styles would overwrite this setting */
+        margin-right: -50vw !important; /* needed to add !important or dataTables default styles would overwrite this setting */
+      }
+      /* END via https://css-tricks.com/full-width-containers-limited-width-parents/ */
+    </style>
   </head>
   <body>
     <h2>Fabi - Zeit für Familie</h2>
-    <h3>Kurse auf einen Blick</h3>
-    <table id="table" class="display" style="width: 100%">
+    <h3>Kurse auf einen Blick (Stand: 17. März 2025)</h3>
+    <table id="table" class="display full-width" style="width: 100vw">
       <thead>
         <tr>
           <th>Titel</th>
           <th>Standort</th>
           <th>Wochentag</th>
           <th>Startdatum</th>
-          <th>Plätze verfügbar?</th>
+          <th>Plätze frei?</th>
           <th>Preis</th>
         </tr>
       </thead>
@@ -29,6 +61,7 @@
     import $ from "jquery";
 
     new DataTable("#table", {
+      order: [[3, "asc"]], // column number is 0-based
       paging: false,
       language: {
         infoFiltered: " - gefiltert aus _MAX_ Einträgen",
@@ -40,6 +73,7 @@
             text: "_TOTAL_ Einträge",
           },
         },
+        bottomStart: null,
       },
       ajax: {
         url: "courses.json",
@@ -60,6 +94,7 @@
                 "</a>"
             );
           },
+          width: "50%",
         },
         {
           data: "location",
@@ -75,12 +110,7 @@
         },
         { data: "start_weekday" },
         { data: "start" },
-        {
-          data: "spots_left",
-          fnCreatedCell: function (nTd, sData, oData, iRow, iCol) {
-            $(nTd).html(oData.spots_left ? "✅" : "❌");
-          },
-        },
+        { data: "spots_left" },
         { data: "price" },
       ],
       initComplete: function () {
@@ -93,7 +123,7 @@
             const select = document.createElement("select");
             select.style.width = "100%";
 
-            select.add(new Option("Filtern..."));
+            select.add(new Option("Filtern...", ""));
             column.header().appendChild(select);
 
             // Apply listener for user change in value
