index.html aktualisieren

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -47,6 +47,7 @@
       <thead>
         <tr>
           <th>Titel</th>
+          <th>Kategorie</th>
           <th>Standort</th>
           <th>Wochentag</th>
           <th>Startdatum</th>
