--- a/website/src/index.html
+++ b/website/src/index.html
@@ -42,7 +42,9 @@
   </head>
   <body>
     <h2>Fabi - Zeit für Familie</h2>
-    <h3>Kurse auf einen Blick (Stand: 18. März 2025)</h3>
+    <h3>
+      Kurse auf einen Blick (Stand: <span id="coursesLastChanged">?</span>)
+    </h3>
     <table id="table" class="display full-width" style="width: 100vw">
       <thead>
         <tr>
@@ -60,6 +62,13 @@
   <script type="module">
     import DataTable from "datatables.net-dt";
     import $ from "jquery";
+
+    document.addEventListener("DOMContentLoaded", () => {
+      if (process.env.COURSES_LAST_CHANGED) {
+        document.querySelector("#coursesLastChanged").textContent =
+          process.env.COURSES_LAST_CHANGED;
+      }
+    });
 
     new DataTable("#table", {
       order: [[4, "asc"]], // column number is 0-based
