Change wording on last changed info

--- a/website/src/index.html
+++ b/website/src/index.html
@@ -42,9 +42,11 @@
   </head>
   <body>
     <h2>Fabi - Zeit für Familie</h2>
-    <h3>
-      Kurse auf einen Blick (Stand: <span id="coursesLastChanged">?</span>)
-    </h3>
+    <h3>Kurse auf einen Blick</h3>
+    <h5>
+      Die Liste wird täglich automatisch aktualisiert. Zuletzt:
+      <span id="coursesLastChanged">?</span>
+    </h5>
     <table id="table" class="display full-width" style="width: 100vw">
       <thead>
         <tr>
