--- a/website/src/index.html
+++ b/website/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
   <head>
-    <title>Fabi Kurse auf einen Blick</title>
+    <title>Fabi-Kurse: Auf einen Blick</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -41,8 +41,13 @@
     </style>
   </head>
   <body>
-    <h2>Fabi - Zeit für Familie</h2>
-    <h3>Kurse auf einen Blick</h3>
+    <h2>Fabi-Kurse: Auf einen Blick</h2>
+    <h3>
+      Angebote von
+      <a href="https://www.fabi-muenchen.de"
+        >Fabi – Paritätische Familienbildungsstätte München e.V.</a
+      >
+    </h3>
     <h5>
       Die Liste wird täglich automatisch aktualisiert. Zuletzt:
       <span id="coursesLastChanged">?</span>
