--- a/website/src/index.html
+++ b/website/src/index.html
@@ -38,6 +38,27 @@
         margin-right: -50vw !important; /* needed to add !important or dataTables default styles would overwrite this setting */
       }
       /* END via https://css-tricks.com/full-width-containers-limited-width-parents/ */
+
+      /* via https://stackoverflow.com/a/6394497, to prevent zooming in on text input select on iOS */
+      input[type="color"],
+      input[type="date"],
+      input[type="datetime"],
+      input[type="datetime-local"],
+      input[type="email"],
+      input[type="month"],
+      input[type="number"],
+      input[type="password"],
+      input[type="search"],
+      input[type="tel"],
+      input[type="text"],
+      input[type="time"],
+      input[type="url"],
+      input[type="week"],
+      select,
+      select:focus,
+      textarea {
+        font-size: 16px;
+      }
     </style>
   </head>
   <body>
@@ -49,19 +70,19 @@
       >
     </h3>
     <h5>
-      Die Liste wird täglich automatisch aktualisiert. Zuletzt:
+      Automatisch täglich aktualisiert. Zuletzt:
       <span id="coursesLastChanged">?</span>
     </h5>
     <div>
       <div>
         <input type="checkbox" id="start-due-toggle" checked />
         <label for="start-due-toggle"
-          >Kurse mit Startdatum in der Vergangenheit ausblenden</label
+          >Nur Kurse mit Startdatum in der Zukunft</label
         >
       </div>
       <div>
         <input type="checkbox" id="all-taken-toggle" checked />
-        <label for="all-taken-toggle">Kurse ohne freie Plätze ausblenden</label>
+        <label for="all-taken-toggle">Nur Kurse mit freien Plätzen</label>
       </div>
     </div>
     <table id="table" class="display full-width" style="width: 100vw">
@@ -76,21 +97,28 @@
         </tr>
       </thead>
     </table>
-           <div style="display: flex; justify-content: center; width: 100%; marin-top: 1em">
-          <a
-            href="https://github.com/markusdosch/fabi-aufeinenblick"
-            style="display: block; width: 25px"
-          >
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-              <path
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-                d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-                fill="#24292f"
-              />
-            </svg>
-          </a>
-        </div>
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        marin-top: 1em;
+      "
+    >
+      <a
+        href="https://github.com/markusdosch/fabi-aufeinenblick"
+        style="display: block; width: 25px"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+            fill="#24292f"
+          />
+        </svg>
+      </a>
+    </div>
   </body>
   <script type="module">
     import DataTable from "datatables.net-dt";
